Amazon S3 Extended Über Edition
==========
V0.0.4:
==========
Main:

Lexicon:


v0.0.3:
==========
Main:
- Added keep image ratio.
  You can enable this by setting the keepRatio property to "Yes".
- Added keepRatio property. (Default: "Yes")
- Added cacheToS3 property.  (Default: "Yes")
- Added s3CacheFolder property. (Default: "_cache")
- Added hideS3Cache property. (Default: "Yes")
- Added custom caching for the file browser.
- Images with spaces in their name should now be properly displayed in the file browser.
- Fixed downloading files with spaces in their names.

Lexicon:
- Added English translation for keepRatio description.
- Added English translation for cacheToS3 description.
- Added English translation for s3CacheFolder description.
- Added English translation for hideS3Cache description.


v0.0.2:
==========
Main:
- Added resize on upload for PNG, JPG, JPEG, GIF filetypes.
  You can enable this by setting the downSize property to "Yes".

- Added sanitize file on upload. (eg. "Foo Bar.PNG" => "foo-bar.png")
  You can enable this by setting the sanitizeFile property to "Yes".

- downSize property now works as intended.

- Added downSizeWidth property (in pixels). (Default: "300")
- Added downSizeHeight property (in pixels). (Default: "300")
- Added downSizeQuality property (in percents). (Default: "90")
- Added sanitizeFiles property. (Default: "Yes")

Lexicon:
- Added English translation for downSizeWidth description.
- Added English translation for downSizeHeight description.
- Added English translation for downSizeQuality description.
- Added Englihs translation for sanitizeFiles description.
- Added English translation for notImplemented error.


v0.0.1:
==========
Main:
- Added basic Amazon S3 source type
- Added downSize property. (Default: "No") Not working

Lexicon:
- Added English translation for package name.
- Added English translation for package description.
- Added English translation for url description.